--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,11 @@
-secret-animal
+.ipynb_checkpoints
+Untitled*
+data/
+model/
+submit/
+codes/custom_functions/__pycache__/
+codes/catboost_info/
+xgboost/
+cmake-3.18.2/
+cmake-3.18.2.tar.gz
+*.log
